objects/GDT_Permissioner__c.object
<CustomObject>
    <fields>
        <fullName>GDT_Application_Name__c</fullName>
        <label>GDT Application Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InSite</fullName>
                </value>
                <value>
                    <fullName>MyBrands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDT_Permission_Id__c</fullName>
        <label>Permission Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDT_Permission_Name__c</fullName>
        <label>Permission Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GDT Permissioner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>GDT_Application_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>GDT_Permission_Name__c</columns>
        <columns>GDT_Permission_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDT Permissioners</pluralLabel>
    <recordTypes>
        <fullName>GDT_Insite</fullName>
        <active>true</active>
        <description>Segregate visible permission set per app</description>
        <label>Insite</label>
    </recordTypes>
    <recordTypes>
        <fullName>GDT_MyBrands</fullName>
        <active>true</active>
        <description>Segregate visible permission set per app</description>
        <label>MyBrands</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>